# sql-canister-rust

./: .gitignore  README.md  dfx.json  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: btree.rs  error.rs  func.rs  lib.rs  mem.rs  pager.rs  pcache.rs  storage.rs  types.rs  vfs.rs  wal.rs
backend/src/api/: connection.rs  mod.rs  row.rs  statement.rs
backend/src/codegen/: mod.rs
backend/src/parser/: ast.rs  mod.rs  parser.rs
backend/src/tokenizer/: lexer.rs  mod.rs  token.rs
backend/src/util/: bytes_ext.rs  checksum.rs  hash.rs  mod.rs  string.rs  varint.rs
backend/src/vdbe/: mem.rs  mod.rs  op.rs  vm.rs
frontend/: exporter.js  importer.js  index.html  package.json
src/declarations/backend/: backend.did  backend.did.d.ts  backend.did.js
tests/: backend.canister.test.js  file-import.test.js
tests/canister/: harness.js
tests/canister/cases/: basic.js  compound-features.js  join-features.js  lifecycle.js  schema-features.js  select-features.js  sql-features.js  subquery-features.js
