[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.10.10"
ic-cdk = "0.18.3"
ic-stable-structures = "0.6.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
byteorder = "1.5.0"
thiserror = "1.0"
parking_lot = { version = "0.12", optional = true }
chrono = { version = "0.4", default-features = false, features = ["std"] }

[features]
default = []
thread-safe = ["dep:parking_lot"]

[dev-dependencies]
rand = "0.8"
